2003-03-01  Dan Espen  <dane@mk.telcordia.com>

	* todo-2.6: Closed B.2, C.21.

2003-02-28  olicha  <olivier.chapuis@free.fr>

	* libs/defaults.h:
	* fvwm/events.c (HandleConfigureRequest): 
	Added a workaround for application with broken max/min size hints
	vs a size configure request. This "fixes" floating java JToolBar.
	
	* fvwm/add_window.c (GetWindowSizeHints):
	Check that the max size hint is not broken relatively to the the base
	size hint

2003-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	released 2.5.6, set version to 2.5.7

	* NEWS:
	* configure.in:
	updated for 2.5.6

2003-02-26  Tony Finch  <dot@dotat.at>

	* fvwm/borders.c (border_draw_one_border_part):
	Don't draw the handle relief marks when the border is flat.

2003-02-27  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	s/fribdi_in_path/fribidi_in_path/

	* todo-2.6:
	spell checking and some reformatting

2003-02-26  olicha  <olivier.chapuis@free.fr>

	* fvwm/borders.c (border_setup_bar_pixmaps):
	Fixed a miss-print which can cause a core dump

	* todo-2.6:
	Added a 2.6 TODO file

2003-02-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/focus.c (focus_grab_buttons): Fix compile problems Forte7,
	void functioin cannot return a value.

2003-02-25  olicha  <olivier.chapuis@free.fr>

	* configure.in:
	Fixed compilation warning if fribidi is in path

2003-02-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.c (CMD_WindowList):
	removed unused instruction

2003-02-22  Dan Espen  <dane@mk.telcordia.com>

	* configure.in: Remove nested function from -Werror check.
	Lets configure work without gcc.

	* fvwm/read.h:
	* fvwm/read.c (run_command_stream): Make Break work from PipeRead.

2003-02-21  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/functions.c (__run_complex_function_items): Make Break start
	working again.

2003-02-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (get_outline_rects):
	(draw_move_resize_grid):